# multi_agentic_system

./: .gitignore  README.md  pyproject.toml
agents/: po_app.py
agents/helper/: currency_helper.py  po_blobstorage.py  po_helpers.py  policy_upload.py
agents/test/: po_appHITL.py  po_app_HITL.py  po_app_HITL_test.ipynb  po_app_agentic.ipynb  po_app_react_agentHITL.py
ui/agent-searchtool/: package-lock.json  package.json  tailwind.config.js
ui/agent-searchtool/src/: App.js  index.js
ui/agent-searchtool/src/components/ui/: avatar.jsx  badge.jsx  button.jsx  card.jsx  dropdown-menu.jsx  input.jsx  scroll-area.jsx  separator.jsx  sheet.jsx  textarea.jsx  toaster.jsx  toggle.jsx  tooltip.jsx  use-toast.js
